# holochain-client-rust

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build-fixture.sh  default.nix  flake.nix  uniffi-bindgen.rs
.github/workflows/: flake_update.yaml  test.yml
fixture/: .gitignore  dna.yaml  happ.yaml  test.happ
fixture/zomes/foo/: Cargo.toml
holochain_nonce/: Cargo.toml
nix/: sources.json
scripts/: build-fixture.sh  build-uniffi-bindings.sh
src/: admin_websocket.rs  app_agent_websocket.rs  app_websocket.rs  app_websocket_inner.rs  error.rs  lib.rs  signing.rs  types.rs
src/signing/: client_signing.rs  lair_signing.rs
tests/: admin.rs  app.rs  app_agent.rs  clone_cell.rs
utilities/: Cargo.toml
utilities/src/: lib.rs
