[package]
name = "holochain_client"
version = "0.7.0-dev.1"
description = "A Rust client for the Holochain Conductor API"
authors = [
    "Guillem Cordoba <guillem.cordoba@gmail.com>",
    "Holochain Core Dev Team <devcore@holochain.org>",
]
license = "MIT"
edition = "2021"
homepage = "https://github.com/holochain/holochain-client-rust"
keywords = ["holochain", "client", "conductor-api"]
readme = "README.md"
repository = "https://github.com/holochain/holochain-client-rust"
resolver = "2"

[workspace]
members = ["fixture/zomes/foo"]

[workspace.dependencies]
holochain_zome_types = "0.5.0-dev.7"

[dependencies]
again = "0.1"
anyhow = "1.0"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
serde = "1.0.193"
event-emitter-rs = "0.1"
rand = { version = "0.8" }
async-trait = "0.1"
parking_lot = "0.12.1"

holo_hash = { version = "0.5.0-dev.0", features = ["encoding"] }
holochain_conductor_api = "0.5.0-dev.7"
holochain_websocket = "0.5.0-dev.7"
holochain_types = "0.5.0-dev.7"
holochain_nonce = "0.5.0-dev.0"
holochain_zome_types = { workspace = true }

lair_keystore_api = { version = "0.5.2", optional = true }
kitsune_p2p_types = "0.5.0-dev.0"

tokio = { version = "1.36", features = ["rt"] }

[dev-dependencies]
fixt = "0.5.0-dev.0"
holochain = { version = "0.5.0-dev.7", features = ["test_utils"] }
serde_yaml = "0.9"

[features]
default = ["lair_signing"]

lair_signing = ["dep:lair_keystore_api"]
