[package]
name = "holochain_client"
version = "0.7.0"
description = "A Rust client for the Holochain Conductor API"
authors = [
    "Guillem Cordoba <guillem.cordoba@gmail.com>",
    "Holochain Core Dev Team <devcore@holochain.org>",
]
license = "MIT"
edition = "2021"
homepage = "https://github.com/holochain/holochain-client-rust"
keywords = ["holochain", "client", "conductor-api"]
readme = "README.md"
repository = "https://github.com/holochain/holochain-client-rust"
resolver = "2"

[workspace]
members = ["fixture/zomes/foo"]

[workspace.dependencies]
holochain_zome_types = "0.5.0"

[profile.dev]
debug = 1

[profile.dev.package."*"]
opt-level = 2
debug = 0
debug-assertions = false
overflow-checks = false
incremental = false
codegen-units = 16

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
event-emitter-rs = "0.1"
holo_hash = { version = "0.5.0", features = ["encoding"] }
holochain_conductor_api = "0.5.0"
holochain_nonce = "0.5.0"
holochain_types = "0.5.0"
holochain_websocket = "0.5.0"
holochain_zome_types = "0.5.0"
kitsune2_api = "0.1.0"
lair_keystore_api = { version = "0.6.1", optional = true }
parking_lot = "0.12.1"
rand = { version = "0.8" }
serde = "1.0.193"
thiserror = "2.0"
tokio = { version = "1.36", features = ["rt"] }

[dev-dependencies]
bytes = "1.10.1"
fixt = "0.5.0"
futures = "0.3.31"
holochain = { version = "0.5.0", features = ["test_utils"] }
kitsune2_core = "0.1.0"
serde_yaml = "0.9"

[features]
default = ["lair_signing"]

lair_signing = ["dep:lair_keystore_api"]

[patch.crates-io]
#hdk = { path = "../holochain/crates/hdk" }
#holo_hash = { path = "../holochain/crates/holo_hash" }
#holochain_conductor_api = { path = "../holochain/crates/holochain_conductor_api" }
#holochain_websocket = { path = "../holochain/crates/holochain_websocket" }
#holochain_types = { path = "../holochain/crates/holochain_types" }
#holochain_nonce = { path = "../holochain/crates/holochain_nonce" }
#holochain_zome_types = { path = "../holochain/crates/holochain_zome_types" }
#holochain = { path = "../holochain/crates/holochain" }
