[package]
authors = ["Holochain Foundation"]
edition = "2021"
name = "utilities"
version = "0.1.0"

[dependencies]
arbitrary = "1.2"
ed25519-dalek = "1"
holochain_client = {path = "../"}
holochain_state = { package = "holochain_state", version = "0.2.1" }
holochain_zome_types = { package = "holochain_zome_types", version = "0.2.1" }
rand = "0.7"
