[package]
name = "test_wasm_foo"
version = "0.0.1"
authors = ["thedavidmeister", "thedavidmeister@gmail.com"]
edition = "2021"

[lib]
name = "test_wasm_foo"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = "1"
hdi = { git="https://github.com/holochain/holochain", package = "hdi", rev = "352bcebe41808b0a5c58cc6f1ed1e1c96149d010" }
hdk = { git="https://github.com/holochain/holochain", package = "hdk", rev = "352bcebe41808b0a5c58cc6f1ed1e1c96149d010" }
