[package]
name = "test_wasm_foo"
version = "0.0.1"
authors = ["thedavidmeister", "thedavidmeister@gmail.com"]
edition = "2021"

[lib]
name = "test_wasm_foo"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = "1"
hdi = { package = "hdi", git = "https://github.com/holochain/holochain", rev = "8cdd455839f4050bbfb6bfb0c4b618b87789db67" }
hdk = { package = "hdk", git = "https://github.com/holochain/holochain", rev = "8cdd455839f4050bbfb6bfb0c4b618b87789db67" }
