[package]
name = "test_wasm_foo"
version = "0.0.1"
authors = ["thedavidmeister", "thedavidmeister@gmail.com"]
edition = "2021"

[lib]
name = "test_wasm_foo"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = "1"
hdi = { package = "hdi", version = "0.3.0-beta-dev.4" }
hdk = { package = "hdk", version = "0.3.0-beta-dev.4" }
